[package]
name = "termfest"
version = "0.1.1"
authors = ["agatan <agatan039@gmail.com>"]
description = "A thread-safe TUI library"
license = "MIT"
homepage = "https://github.com/agatan/termfest"
repository = "https://github.com/agatan/termfest"
keywords = ["terminal", "tui", "tty", "console"]

[dependencies]
term = "0.4"
libc = "0.2"
signal-notify = "0.1.2"
unicode-width = "0.1"
num = "0.1"
num-derive = "0.1"
bitflags = "0.9"
